tests/sources/invalid/classes/implicit_var_method_call_on_untyped.fire
// An implicitly-declared variable whose right-hand side is a plain
// (non-constructor, non-user-type) function call gets no inferred type.
// Calling a method on it later re-derives the (still-unknown) type from
// the scope table rather than the identifier's own annotation -- exercises
// the current_scope-lookup fallback in resolve_variable_types's
// VARIABLE_ASSIGNMENT/METHOD_CALL inference path.
import @firescript/std.io.println;

class Foo {
    v: int32;

    fn Foo(v: int32) {
        this.v = v;
    }

    fn get() -> int32 {
        return this.v;
    }
}

fn main() -> int32 {
    a = println(1);  //~ ERROR FS-PARSE-0003 @5
    b = a.get();  //~ ERROR FS-PARSE-0003 @5
    return 0;
}
